# openarm-gazebo

./: .gitignore  LICENSE  NOTICE  README.md  openarm_gazebo.repos
docker/: Dockerfile  docker-compose.yaml  setup_x11.sh
docs/: 01-design.md  02-files.md  03-nodes.md  04-interfaces.md  05-motion-planning.md  README.md
ros_ws/src/openarm_bimanual_moveit_config/: CMakeLists.txt  package.xml
ros_ws/src/openarm_bimanual_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  openarm_bimanual.srdf  ros2_controllers.yaml
ros_ws/src/openarm_bimanual_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py
ros_ws/src/openarm_bringup/: CMakeLists.txt  package.xml
ros_ws/src/openarm_bringup/launch/: sim.launch.py
ros_ws/src/openarm_bringup/scripts/: scene_setup.py
ros_ws/src/openarm_gz_sim/: CMakeLists.txt  package.xml
ros_ws/src/openarm_gz_sim/config/: ros2_controllers.yaml
ros_ws/src/openarm_gz_sim/launch/: gz_sim.launch.py  spawn_robot.launch.py
ros_ws/src/openarm_gz_sim/urdf/: openarm_gz.ros2_control.xacro  openarm_gz_bimanual.urdf.xacro
ros_ws/src/openarm_gz_sim/worlds/: empty.sdf
scripts/: build.sh
