<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openarm_bimanual_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt 2 configuration for OpenArm bimanual setup (Jazzy + Gazebo Harmonic)</description>
  <maintainer email="yokosawasaba@gmail.com">shuichiyokosawa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>openarm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
